--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
+@font-face {
+    font-family: "Ubuntu";
+    src: url("UBUNTUTITLING-BOLD_0.TTF");
+}
+
 body {
     background-color: #373545;
+    font-family: "Ubuntu";
 }
 
 #mycanvas {
@@ -7,13 +13,26 @@ body {
     box-shadow: 0px 0px 64px 4px rgba(0, 0, 0, 0.25);
 }
 
-#canvas-container {
+.container {
     display: flex;
-    width: auto;
+    width: 100%;
     height: max-content;
 }
 
-.prop-container {
+.prop-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.prop-wrapper .label {
+    color: #FFF;
+    font-size: 1.1em;
+    text-transform: uppercase;
+}
+
+.prop-column {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,6 +40,18 @@ body {
     border-radius: 28px;
     margin: 10px 25px;
     padding: 10px;
+    height: 100%;
+}
+
+.prop-row {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border: solid 4px #544D7C;
+    border-radius: 28px;
+    margin: 10px 25px;
+    padding: 10px;
+    height: 100%;
 }
 
 .prop {
