--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body {
     background-color: #373545;
     font-family: "Ubuntu";
+    margin: 20px auto;
 }
 
 #mycanvas {
@@ -71,14 +72,11 @@ body {
     border: solid 4px #FFF;
 }
 
+
 .prop-selected {
     border: solid 4px #FFF;
     transition: border 0.2s;
 }
-
-/* #colorpicker {
-    background: linear-gradient(105.07deg, #FF8787 22.46%, #F6CD62 30.7%, #B1E182 37.42%, #99E3D1 52.06%, #69B5EC 65.79%, #CA9AE8 81.05%);
-} */
 
 input[type=color] {
     border: none;
@@ -88,4 +86,129 @@ input[type=color] {
     background: linear-gradient(105.07deg, #FF8787 22.46%, #F6CD62 30.7%, #B1E182 37.42%, #99E3D1 52.06%, #69B5EC 65.79%, #CA9AE8 81.05%);
     height: 1px;
     padding: 25px;
+}
+
+.color {
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    margin: 10px;
+    transition: width 0.2s, height 0.2s;
+}
+
+.color:hover {
+    width: 30px;
+    height: 30px;
+}
+
+#top-container .prop-row {
+    align-items: flex-start;
+    height: max-content;
+}
+
+#undo, 
+#redo {
+    cursor: pointer;
+    margin: 10px;
+    transition: background-color 0.2s;
+}
+
+#undo:hover path, 
+#redo:hover path {
+    fill: #544D7C;
+}
+
+#top-container, 
+#second-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+#second-container .prop-wrapper {
+    max-height: 100px;
+}
+
+#palette-wrapper {
+    width: 800px;
+    margin: 30px 10px;
+}
+
+#palette-wrapper .palette-label {
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: -10px;
+}
+
+.palette-label::before {
+    content: "";
+    width: 100%;
+    height: 10px;
+    border-top: solid 4px #544D7C;
+    border-left: solid 4px #544D7C;
+    border-right: solid 4px #544D7C;
+    border-radius: 28px 28px 0px 0;
+    margin-right: 10px;
+    
+}
+
+.palette-label::after {
+    content: "";
+    width: 100%;
+    height: 10px;
+    border-top: solid 4px #544D7C;
+    border-left: solid 4px #544D7C;
+    border-right: solid 4px #544D7C;
+    border-radius: 28px 28px 0px 0;
+    margin-left: 10px;
+}
+
+.palette-label .label {
+
+    padding-bottom: 5px;
+    border-bottom: solid 4px #544D7C;
+}
+
+
+.palette-label .label::before {
+    content: "";
+    position: absolute;
+    margin-left: -14px;
+    margin-top: 19px;
+    width: 15px;
+    height: 6px;
+    border-bottom: solid 4px #544D7C;
+    border-left: solid 4px #544D7C;
+    border-radius: 28px;
+}
+
+.palette-label .label::after {
+    content: "";
+    position: absolute;
+    margin-left: -5px;
+    margin-top: 19px;
+    width: 15px;
+    height: 6px;
+    border-bottom: solid 4px #544D7C;
+    border-right: solid 4px #544D7C;
+    border-radius: 28px;
+}
+
+#palette-wrapper .palette-row {
+    width: 96.5%;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    border-bottom: solid 4px #544D7C;
+    border-left: solid 4px #544D7C;
+    border-right: solid 4px #544D7C;
+    border-radius: 0 0 28px 28px;
+    margin: 0 25px 10px 25px;
+    padding: 10px;
 }
