--- a/style.css
+++ b/style.css
@@ -126,13 +126,50 @@ input[type=color] {
     justify-content: center;
 }
 
-#second-container .prop-wrapper {
+#second-container {
+    justify-content: center;
+}
+
+#second-container .prop-wrapper:first-child,
+#second-container .prop-wrapper:last-child {
     max-height: 100px;
 }
 
+#second-container .prop-wrapper:first-child {
+    margin-right: 25px;
+}
+
+#second-container .prop-wrapper:last-child {
+    margin-left: 25px;
+}
+
+#second-container .prop-wrapper:first-child .prop-row,
+#second-container .prop-wrapper:last-child .prop-row {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    border-radius: 16px 16px 28px 28px;
+}
+
+#second-container .prop-wrapper:first-child .prop-row svg,
+#second-container .prop-wrapper:last-child .prop-row svg {
+    cursor: pointer;
+    transition: fill 0.2s;
+}
+
+
+#second-container .prop-wrapper:first-child .prop-row svg:hover path {
+    fill: rgb(255, 135, 135);
+} 
+
+#second-container .prop-wrapper:last-child .prop-row svg:hover path {
+    fill: rgb(177, 225, 130);
+} 
+
+
 #palette-wrapper {
-    width: 800px;
-    margin: 30px 10px;
+    width: 750px;
+    margin: 20px 10px;
 }
 
 #palette-wrapper .palette-label {
