--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 #mycanvas {
     border-radius: 28px;
-    box-shadow: 0px 0px 64px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 0px 64px 4px rgba(0, 0, 0, 0.5);
 }
 
 .container {
@@ -128,6 +128,7 @@ input[type=color] {
 
 #second-container {
     justify-content: center;
+    margin-top: 25px;
 }
 
 #second-container .prop-wrapper:first-child,
@@ -169,7 +170,7 @@ input[type=color] {
 
 #palette-wrapper {
     width: 750px;
-    margin: 20px 10px;
+    margin: 0px 10px;
 }
 
 #palette-wrapper .palette-label {
