Reorganized project structure

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Ubuntu";
-    src: url("UBUNTUTITLING-BOLD_0.TTF");
+    src: url("../public/UBUNTUTITLING-BOLD_0.TTF");
 }
 
 body {
